--- a/data/vacancies/backend.html
+++ b/data/vacancies/backend.html
@@ -30,8 +30,15 @@
   </ul>
   
   <p class="pt-8">About the project:</p>
-  <p class="pl-4 pb-16 md:pb-32">VieRally is building an AI-powered platform predicting opinion dynamics on social media to anticipate offline behavior and consumer opinion. We evolved from supercharging the fight against ideological extremism to providing actionable predictions for traders on financial markets. The customers in our target market love innovation, and spend over $10 billion USD annually on data and analytics. VieRally has proven the science behind its platform, signed up early customers, validated its solution with industry leaders (including Senior Vice Presidents at Fortune-100 companies), and secured initial funding.
+  <p class="pl-4">VieRally is building an AI-powered platform predicting opinion dynamics on social media to anticipate offline behavior and consumer opinion. We evolved from supercharging the fight against ideological extremism to providing actionable predictions for traders on financial markets. The customers in our target market love innovation, and spend over $10 billion USD annually on data and analytics. VieRally has proven the science behind its platform, signed up early customers, validated its solution with industry leaders (including Senior Vice Presidents at Fortune-100 companies), and secured initial funding.
 
   </p>
+  <div class="flex flex-col items-center pb-16 md:pb-32">
+    <a href="mailto:job@swiftinvention.com?subject=resume for Software Engineer position&amp;body=Dear Hiring Manager,">
+      <button type="submit" class="inline-flex items-center justify-center border-2 border-primaryCol3 text-primaryCol3 hover:text-primaryCol1 hover:bg-primaryCol3 h-8 w-37 mt-10 font-sans font-medium text-sm focus:outline-none focus:ring-2 focus:ring-inset focus:ring-primaryCol3">
+        apply for a job
+      </button>
+    </a>
+  </div>
 </div>
 </div></body></html>
