--- a/data/vacancies/backend.html
+++ b/data/vacancies/backend.html
@@ -1,44 +1,48 @@
-<!DOCTYPE html><html><head></head>
-<body><div>
+<!DOCTYPE html><html><head></head><body><div>
   <h1 class="font-medium text-4xl mb-5">Software Engineer (Scala/Java)</h1>
+
   <div class="font-normal text-lg pt-16">
     <p>Full-time</p>
     <p>Remote (Europe, Georgia, Armenia, Turkey, Kazakhstan, Russia)</p>
     <p>We are looking for Software Engineer (Scala).</p>
-  <p class="pt-8">Required skills:</p>
-  <ul class="list-disc pl-4">
-    <li>3+ years of work experience in developing</li>
-    <li>Strong background in Java or Scala</li>
-    <li>Designing and implementing REST or gRPC APIs</li>
-    <li>Experience with relational databases (mySQL/PostgresSQL)</li>
-    <li>Bachelor&#x2019;s degree or higher in computer science or a related field</li>   
-  </ul>
-  <p class="pt-8">Desired skills:</p>
-<ul class="list-disc pl-4">
-  <li>experience with ZIO or Akka, ideally both</li>
-  <li>understanding the core FP concepts</li>
-  <li>interest in Kubernetes</li>
-  <li>experience with Linux, Docker</li>
-  <li>Scala is not a requirement, but you must be willing to learn Scala</li>
-</ul>
-  <p class="pt-8">We offer:</p>
-  <ul class="list-disc pl-4">
-    <li>Paid time off (24 working days per year)</li>
-    <li>Equipment: laptop (i7, 16/32GB RAM), 4k monitor</li>
-    <li>Flexible working hours</li>
-    <li>Help with relocation from Russian</li>
-  </ul>
-  
-  <p class="pt-8">About the project:</p>
-  <p class="pl-4">VieRally is building an AI-powered platform predicting opinion dynamics on social media to anticipate offline behavior and consumer opinion. We evolved from supercharging the fight against ideological extremism to providing actionable predictions for traders on financial markets. The customers in our target market love innovation, and spend over $10 billion USD annually on data and analytics. VieRally has proven the science behind its platform, signed up early customers, validated its solution with industry leaders (including Senior Vice Presidents at Fortune-100 companies), and secured initial funding.
 
-  </p>
-  <div class="flex flex-col items-center pb-16 md:pb-32">
-    <a href="mailto:job@swiftinvention.com?subject=resume for Software Engineer position&amp;body=Dear Hiring Manager,">
-      <button type="submit" class="inline-flex items-center justify-center border-2 border-primaryCol3 text-primaryCol3 hover:text-primaryCol1 hover:bg-primaryCol3 h-8 w-37 mt-10 font-sans font-medium text-sm focus:outline-none focus:ring-2 focus:ring-inset focus:ring-primaryCol3">
-        apply for a job
-      </button>
-    </a>
+    <p class="pt-8">Required skills:</p>
+    <ul class="list-disc pl-4">
+      <li>3+ years of work experience in developing</li>
+      <li>Strong background in Java or Scala</li>
+      <li>Designing and implementing REST or gRPC APIs</li>
+      <li>Experience with relational databases (mySQL/PostgresSQL)</li>
+      <li>Bachelor&#x2019;s degree or higher in computer science or a related field</li>
+    </ul>
+    <p class="pt-8">Desired skills:</p>
+    <ul class="list-disc pl-4">
+      <li>experience with ZIO or Akka, ideally both</li>
+      <li>understanding the core FP concepts</li>
+      <li>interest in Kubernetes</li>
+      <li>experience with Linux, Docker</li>
+      <li>Scala is not a requirement, but you must be willing to learn Scala</li>
+    </ul>
+    <p class="pt-8">We offer:</p>
+    <ul class="list-disc pl-4">
+      <li>Paid time off (24 working days per year)</li>
+      <li>Equipment: laptop (i7, 16/32GB RAM), 4k monitor</li>
+      <li>Flexible working hours</li>
+      <li>Help with relocation from Russian</li>
+    </ul>
+
+    <p class="pt-8">About the project:</p>
+    <p class="pl-4">VieRally is building an AI-powered platform predicting opinion dynamics on social media to anticipate offline behavior and consumer opinion. We evolved from
+      supercharging the fight against ideological extremism to providing actionable predictions for traders on financial markets. The customers in our target market love
+      innovation, and spend over $10 billion USD annually on data and analytics. VieRally has proven the science behind its platform, signed up early customers, validated its
+      solution with industry leaders (including Senior Vice Presidents at Fortune-100 companies), and secured initial funding.
+
+    </p>
+    <div class="flex flex-col items-center pb-16 md:pb-32">
+      <a href="mailto:job@swiftinvention.com?subject=&lt;Your name&gt; - resume for Software Engineer position&amp;body=Dear Hiring Manager,">
+        <button type="submit" class="inline-flex items-center justify-center border-2 border-primaryCol3 text-primaryCol3 hover:text-primaryCol1 hover:bg-primaryCol3 h-8 w-37 mt-10 font-sans font-medium text-sm focus:outline-none focus:ring-2 focus:ring-inset focus:ring-primaryCol3">
+          Apply Now
+        </button>
+      </a>
+    </div>
   </div>
-</div>
 </div></body></html>
