Update job posing

--- a/public/data/vacancies/architect.html
+++ b/public/data/vacancies/architect.html
@@ -1,55 +1,52 @@
 <!doctype html>
-<head></head>
+
 <div>
   <h1 class="font-medium text-4xl mb-5">Software Architect</h1>
   <div class="font-normal text-lg pt-16">
-    <p>We are looking for Software Architect.</p>
-  <p class="pt-8">Required skills:</p>
-  <ul class="list-disc pl-4">
-    <li>Experience with Typescript/Javascript</li>
-    <li>Experience with React or Vue</li>
-    <li>Bachelor’s degree or higher in computer science or a related field</li>
-    <li>3+ years of work experience in developing</li>
-    
-  </ul>
-  <p class="pt-8">Desired skills:</p>
-<ul class="list-disc pl-4">
-  <li>React v17+, hooks API, functional components</li>
-  <li>React Router</li>
-  <li>Typescript</li>
-  <li>Tailwind</li>
-  <li>I18-next</li>
-  <li>Recoil/Jotai state management</li>
-  <li>Monorepo (yarn workspaces)</li>
-  <li>Webpack/Vite/Snowpack</li>
-</ul>
-  <p class="pt-8">We offer:</p>
-  <ul class="list-disc pl-4">
-    <li>Paid time off (24 working days per year)</li>
-    <li>Equipment: laptop (i7, 16/32GB RAM), 4k monitor</li>
-    <li>Flexible working hours</li>
-    <li>Help with relocation from Russian</li>
-  </ul>
-  
-  <p class="pt-8">About the project:</p>
-  <p class="pl-4">VieRally is building an AI-powered platform predicting opinion dynamics on social media to 
-    anticipate offline behavior and consumer opinion. We evolved from supercharging the fight 
-    against ideological extremism to providing actionable predictions for traders on financial 
-    markets. The customers in our target market love innovation, and spend over $10 billion USD 
-    annually on data and analytics. VieRally has proven the science behind its platform, signed up 
-    early customers, validated its solution with industry leaders (including Senior Vice Presidents 
-    at Fortune-100 companies), and secured initial funding.
-  </p>
-  <div class="flex flex-col items-center pb-16 md:pb-32">
-    <a href="mailto:job@swiftinvention.com?subject=resume for Software Architect position&body=Dear Hiring Manager,">
-      <button
-        type="submit"
-        class="inline-flex items-center justify-center border-2 border-primaryCol3 text-primaryCol3 hover:text-primaryCol1 hover:bg-primaryCol3 h-8 w-37 mt-10 font-sans font-medium text-sm focus:outline-none focus:ring-2 focus:ring-inset focus:ring-primaryCol3"
-      >
-        apply for a job
-      </button>
-    </a>
+    <p>Full-time</p>
+    <p>Remote (Europe, Georgia, Armenia, Turkey, Kazakhstan, Russia)</p>
+
+    <p class="pt-8">Required skills:</p>
+    <ul class="list-disc pl-4">
+      <li>7+ years of work experience in developing</li>
+      <li>Strong background in Java or Scala</li>
+      <li>Designing and implementing API</li>
+      <li>Leading technical design and development efforts for cloud-based applications</li>
+      <li>Experience with at least one cloud provider AWS/OCI/GCP/Azure</li>
+      <li>Bachelor’s degree or higher in computer science or a related field</li>
+    </ul>
+
+    <p class="pt-8">Desired skills:</p>
+    <ul class="list-disc pl-4">
+      <li>Understanding the core FP concepts</li>
+      <li>Experience with Kubernetes, Docker and Linux</li>
+    </ul>
+
+    <p class="pt-8">We offer:</p>
+    <ul class="list-disc pl-4">
+      <li>Paid time off (24 working days per year)</li>
+      <li>Equipment: laptop (i7, 16/32GB RAM), 4k monitor</li>
+      <li>Flexible working hours</li>
+      <li>Help with relocation from Russian</li>
+    </ul>
+
+    <p class="pt-8">About the project:</p>
+    <p class="pl-4">VieRally is building an AI-powered platform predicting opinion dynamics on social media to
+      anticipate offline behavior and consumer opinion. We evolved from supercharging the fight
+      against ideological extremism to providing actionable predictions for traders on financial
+      markets. The customers in our target market love innovation, and spend over $10 billion USD
+      annually on data and analytics. VieRally has proven the science behind its platform, signed up
+      early customers, validated its solution with industry leaders (including Senior Vice Presidents
+      at Fortune-100 companies), and secured initial funding.
+    </p>
+    <div class="flex flex-col items-center pb-16 md:pb-32">
+      <a href="mailto:job@swiftinvention.com?subject=<Your name> - resume for Software Architect position&body=Dear Hiring Manager,">
+        <button type="submit"
+          class="inline-flex items-center justify-center border-2 border-primaryCol3 text-primaryCol3 hover:text-primaryCol1 hover:bg-primaryCol3 h-8 w-37 mt-10 font-sans font-medium text-sm focus:outline-none focus:ring-2 focus:ring-inset focus:ring-primaryCol3">
+          Apply Now
+        </button>
+      </a>
+    </div>
   </div>
-</div>
-  
+
 </div>
