--- a/data/vacancies/architect.html
+++ b/data/vacancies/architect.html
@@ -10,7 +10,7 @@
       <li>Strong background in Java or Scala</li>
       <li>Designing and implementing API</li>
       <li>Leading technical design and development efforts for cloud-based applications</li>
-      <li>Work experience at least with one cloud privider AWS/OCI/GCP/Azure</li>
+      <li>Experience with at least one cloud provider AWS/OCI/GCP/Azure</li>
       <li>Bachelor&#x2019;s degree or higher in computer science or a related field</li>
     </ul>
 
