--- a/data/vacancies/backend.html
+++ b/data/vacancies/backend.html
@@ -4,7 +4,8 @@
   <div class="font-normal text-lg pt-16">
     <p>Full-time</p>
     <p>Remote (Europe, Georgia, Armenia, Turkey, Kazakhstan, Russia)</p>
-    <p>We are looking for Software Engineer (Scala).</p>
+
+    <!-- <p>We are looking for Software Engineer (Scala).</p> -->
 
     <p class="pt-8">Required skills:</p>
     <ul class="list-disc pl-4">
@@ -14,6 +15,7 @@
       <li>Experience with relational databases (mySQL/PostgresSQL)</li>
       <li>Bachelor&#x2019;s degree or higher in computer science or a related field</li>
     </ul>
+
     <p class="pt-8">Desired skills:</p>
     <ul class="list-disc pl-4">
       <li>experience with ZIO or Akka, ideally both</li>
@@ -22,6 +24,7 @@
       <li>experience with Linux, Docker</li>
       <li>Scala is not a requirement, but you must be willing to learn Scala</li>
     </ul>
+
     <p class="pt-8">We offer:</p>
     <ul class="list-disc pl-4">
       <li>Paid time off (24 working days per year)</li>
