--- a/data/vacancies/architect.html
+++ b/data/vacancies/architect.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html><html><head></head><body><div>
+<div>
   <h1 class="font-medium text-4xl mb-5">Software Architect</h1>
   <div class="font-normal text-lg pt-16">
     <p>Full-time</p>
@@ -11,7 +11,7 @@
       <li>Designing and implementing API</li>
       <li>Leading technical design and development efforts for cloud-based applications</li>
       <li>Experience with at least one cloud provider AWS/OCI/GCP/Azure</li>
-      <li>Bachelor&#x2019;s degree or higher in computer science or a related field</li>
+      <li>Bachelor’s degree or higher in computer science or a related field</li>
     </ul>
 
     <p class="pt-8">Desired skills:</p>
@@ -37,13 +37,7 @@
       early customers, validated its solution with industry leaders (including Senior Vice Presidents
       at Fortune-100 companies), and secured initial funding.
     </p>
-    <div class="flex flex-col items-center pb-16 md:pb-32">
-      <a href="mailto:job@swiftinvention.com?subject=&lt;Your name&gt; - resume for Software Architect position&amp;body=Dear Hiring Manager,">
-        <button type="submit" class="inline-flex items-center justify-center border-2 border-primaryCol3 text-primaryCol3 hover:text-primaryCol1 hover:bg-primaryCol3 h-8 w-37 mt-10 font-sans font-medium text-sm focus:outline-none focus:ring-2 focus:ring-inset focus:ring-primaryCol3">
-          Apply Now
-        </button>
-      </a>
-    </div>
+    
   </div>
 
-</div></body></html>
+</div>
