--- a/data/vacancies/frontend.html
+++ b/data/vacancies/frontend.html
@@ -1,5 +1,4 @@
-<!DOCTYPE html><html><head></head>
-<body><div>
+<div>
   <h1 class="font-medium text-4xl mb-5">Front End Engineer</h1>
   <div class="font-normal text-lg pt-16">
     <p>We are looking for Front End Engineer.</p>
@@ -7,7 +6,7 @@
   <ul class="list-disc pl-4">
     <li>Experience with Typescript/Javascript</li>
     <li>Experience with React or Vue</li>
-    <li>Bachelor&#x2019;s degree or higher in computer science or a related field</li>
+    <li>Bachelor’s degree or higher in computer science or a related field</li>
     <li>3+ years of work experience in developing</li>
     
   </ul>
@@ -39,12 +38,5 @@
     early customers, validated its solution with industry leaders (including Senior Vice Presidents 
     at Fortune-100 companies), and secured initial funding.
   </p>
-  <div class="flex flex-col items-center pb-16 md:pb-32">
-    <a href="mailto:job@swiftinvention.com?subject=resume for Front End Engineer position&amp;body=Dear Hiring Manager,">
-      <button type="submit" class="inline-flex items-center justify-center border-2 border-primaryCol3 text-primaryCol3 hover:text-primaryCol1 hover:bg-primaryCol3 h-8 w-37 mt-10 font-sans font-medium text-sm focus:outline-none focus:ring-2 focus:ring-inset focus:ring-primaryCol3">
-        apply for a job
-      </button>
-    </a>
-  </div>
 </div>
-</div></body></html>
+</div>
