--- a/data/vacancies/backend.html
+++ b/data/vacancies/backend.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html><html><head></head><body><div>
+<div>
   <h1 class="font-medium text-4xl mb-5">Software Engineer (Scala/Java)</h1>
 
   <div class="font-normal text-lg pt-16">
@@ -13,7 +13,7 @@
       <li>Strong background in Java or Scala</li>
       <li>Designing and implementing REST or gRPC APIs</li>
       <li>Experience with relational databases (mySQL/PostgresSQL)</li>
-      <li>Bachelor&#x2019;s degree or higher in computer science or a related field</li>
+      <li>Bachelor’s degree or higher in computer science or a related field</li>
     </ul>
 
     <p class="pt-8">Desired skills:</p>
@@ -40,12 +40,5 @@
       solution with industry leaders (including Senior Vice Presidents at Fortune-100 companies), and secured initial funding.
 
     </p>
-    <div class="flex flex-col items-center pb-16 md:pb-32">
-      <a href="mailto:job@swiftinvention.com?subject=&lt;Your name&gt; - resume for Software Engineer position&amp;body=Dear Hiring Manager,">
-        <button type="submit" class="inline-flex items-center justify-center border-2 border-primaryCol3 text-primaryCol3 hover:text-primaryCol1 hover:bg-primaryCol3 h-8 w-37 mt-10 font-sans font-medium text-sm focus:outline-none focus:ring-2 focus:ring-inset focus:ring-primaryCol3">
-          Apply Now
-        </button>
-      </a>
-    </div>
   </div>
-</div></body></html>
+</div>
