--- a/data/vacancies/backend.html
+++ b/data/vacancies/backend.html
@@ -2,8 +2,11 @@
   <h1 class="font-medium text-4xl mb-5">Software Engineer (Scala/Java)</h1>
 
   <div class="font-normal text-lg pt-16">
-    <p>Full-time</p>
-    <p>Remote (Europe, Georgia, Armenia, Turkey, Kazakhstan, Russia)</p>
+
+    <ul class="list-disc pl-4">
+      <li>Full-time</li>
+      <li>Remote (Europe, Georgia, Armenia, Turkey, Kazakhstan, Russia)</li>
+    </ul>
 
     <!-- <p>We are looking for Software Engineer (Scala).</p> -->
 
