--- a/data/vacancies/datascientist.html
+++ b/data/vacancies/datascientist.html
@@ -1,25 +1,29 @@
 <div>
-  <h1 class="font-medium text-4xl mb-5">Software Architect</h1>
+  <h1 class="font-medium text-4xl mb-5">Data Scientist</h1>
   <div class="font-normal text-lg pt-16">
     <ul class="list-disc pl-4">
       <li>Full-time</li>
       <li>Remote (Europe, Georgia, Armenia, Turkey, Kazakhstan, Russia)</li>
     </ul>
 
-    <p class="pt-8">Required skills:</p>
-    <ul class="list-disc pl-4">
-      <li>7+ years of work experience in developing</li>
-      <li>Strong background in Java or Scala</li>
-      <li>Designing and implementing API</li>
-      <li>Leading technical design and development efforts for cloud-based applications</li>
-      <li>Experience with at least one cloud provider AWS/OCI/GCP/Azure</li>
-      <li>Bachelor’s degree or higher in computer science or a related field</li>
-    </ul>
 
     <p class="pt-8">Desired skills:</p>
     <ul class="list-disc pl-4">
-      <li>Understanding the core FP concepts</li>
-      <li>Experience with Kubernetes, Docker and Linux</li>
+      <li>History of working successfully in innovating and fast moving companies</li>
+      <li>Demonstrated capability of developing and implementing Machine Learning algorithms</li>
+      <li>Experience with Social Network Analysis concepts and algorithms such as edge inference and filtering, community detection, etc. </li>
+      <li>Experience with Natural Language processing</li>
+      <li>Experience reviewing and evaluating data and social science analysis research for application</li>
+      <li>Experience with Social Media data</li>
+      <li>Bachelor’s degree or higher in computer science or a related field</li>
+    </ul>
+
+    <p class="pt-8">Key responsibilities will include:</p>
+    <ul class="list-disc pl-4">
+      <li>Computationally analyzing social network dynamics and language usage data</li>
+      <li>Building machine-learning models on social network and language signals for the prediction of intermediate (e.g. “re-tweeting”) and final phenomena of interest (e.g.
+        “Brand Sentiment”) </li>
+      <li>Exploring data and adapting scientific research, e.g. literature search and replication</li>
     </ul>
 
     <p class="pt-8">We offer:</p>
@@ -31,7 +35,8 @@
     </ul>
 
     <p class="pt-8">About the project:</p>
-    <p class="pl-4">VieRally is building an AI-powered platform predicting opinion dynamics on social media to
+    <p class="pl-4">
+      VieRally is building an AI-powered platform predicting opinion dynamics on social media to
       anticipate offline behavior and consumer opinion. We evolved from supercharging the fight
       against ideological extremism to providing actionable predictions for traders on financial
       markets. The customers in our target market love innovation, and spend over $10 billion USD
@@ -39,7 +44,7 @@
       early customers, validated its solution with industry leaders (including Senior Vice Presidents
       at Fortune-100 companies), and secured initial funding.
     </p>
-    
+
   </div>
 
 </div>
