--- a/data/vacancies/backend.html
+++ b/data/vacancies/backend.html
@@ -21,10 +21,10 @@
 
     <p class="pt-8">Desired skills:</p>
     <ul class="list-disc pl-4">
-      <li>experience with ZIO or Akka, ideally both</li>
-      <li>understanding the core FP concepts</li>
-      <li>interest in Kubernetes</li>
-      <li>experience with Linux, Docker</li>
+      <li>Experience with ZIO or Akka, ideally both</li>
+      <li>Understanding the core FP concepts</li>
+      <li>Interest in Kubernetes</li>
+      <li>Experience with Linux, Docker</li>
       <li>Scala is not a requirement, but you must be willing to learn Scala</li>
     </ul>
 
