--- a/data/vacancies/rust.html
+++ b/data/vacancies/rust.html
@@ -1,5 +1,5 @@
 <div>
-  <h1 class="font-medium text-4xl mb-5">Mobile Developer (iOS/Android) </h1>
+  <h1 class="font-medium text-4xl mb-5">Software Engineer (Rust)</h1>
 
   <div class="font-normal text-lg pt-16">
 
@@ -10,36 +10,29 @@
 
     <p class="pt-8">Required skills:</p>
     <ul class="list-disc pl-4">
-      <li>Proficiency in both Swift/iOS and Java/Android development</li>
-      <li>Proficient with Swift and familiarity with Objective-C.</li>
-      <li>Knowledge of the asynchronous, Swift Primises and event-based design of RxJava or Kotlin coroutines</li>
-      <li>Knowledge of mobile app testing best practices</li>
+      <li>5+ years of work experience in developing including 1+ year in Rust</li>
+      <li>Knowledge of cryptography and security best practices</li>
+      <li>Experience in building Distributed systems</li>
+      <li>Designing and implementing REST or gRPC APIs</li>
+      <li>Experience with relational databases (SQLite/MySQL/PostgresSQL)</li>
       <li>Bachelor’s degree or higher in computer science or a related field</li>
-      <li>3+ years of native mobile development experience</li>
     </ul>
 
     <p class="pt-8">Desired Skills & Experience:</p>
     <ul class="list-disc pl-4">
-      <li>REST</li>
-      <li>WebView</li>
-      <li>Swift UI or analogs (Snapkit, etc)</li>
-      <li>UIKit</li>
-      <li>ARC</li>
-      <li>GCD</li>
-      <li>Realm or analogs</li>
-      <li>MVP patterns</li>
-      <li>Jetpack Compose</li>
+      <li>Experience in building Decentralized application</li>
+      <li>Experience with SI OIDC, DIDs, IPFS will be a big plus</li>
+      <li>Understanding blockchain technology</li>
+      <li>Experience with Linux, Docker and Kubernetes</li>
     </ul>
 
     <p class="pt-8">We offer:</p>
     <ul class="list-disc pl-4">
       <li>Paid time off (24 working days per year)</li>
-      <li>Equipment: Macbook Pro</li>
+      <li>Equipment: laptop (i7, 16/32GB RAM), 4k monitor</li>
       <li>Flexible working hours</li>
     </ul>
 
-    <!-- <p class="pt-8">About the project:</p>
-    <p class="pl-4"></p> -->
     <p class="pt-8">About the project:</p>
     <p class="pl-4">Mee is a software and legal framework to support human-centered apps that improve the quality of online life by giving people more control over their personal data.</p>
     <p class="pl-4">https://mee.foundation/</p>
