--- a/data/vacancies/architect.html
+++ b/data/vacancies/architect.html
@@ -3,7 +3,7 @@
   <div class="font-normal text-lg pt-16">
     <ul class="list-disc pl-4">
       <li>Full-time</li>
-      <li>Remote (Europe, Georgia, Armenia, Turkey, Kazakhstan, Russia)</li>
+      <li>Remote</li>
     </ul>
 
     <p class="pt-8">Required skills:</p>
