--- a/data/vacancies/mobile.html
+++ b/data/vacancies/mobile.html
@@ -39,7 +39,7 @@
     </ul>
 
     <p class="pt-8">About the project:</p>
-    <p class="pl-4"><a target="blank" href="https://mee.foundation/">Mee</a> is a software and legal framework to support human-centered apps that improve the quality of online life by giving people more control over their personal data.</p>
+    <p class="pl-4"><a target="blank" href="https://mee.foundation/">Mee https://mee.foundation/ </a> is a software and legal framework to support human-centered apps that improve the quality of online life by giving people more control over their personal data.</p>
 
   </div>
 </div>
