--- a/public/data/vacancies/backend.html
+++ b/public/data/vacancies/backend.html
@@ -5,7 +5,7 @@
 
     <ul class="list-disc pl-4">
       <li>Full-time</li>
-      <li>Remote (Europe, Georgia, Armenia, Turkey, Kazakhstan, Russia)</li>
+      <li>Remote</li>
     </ul>
 
     <!-- <p>We are looking for Software Engineer (Scala).</p> -->
@@ -15,7 +15,7 @@
       <li>3+ years of work experience in developing</li>
       <li>Strong background in Java or Scala</li>
       <li>Designing and implementing REST or gRPC APIs</li>
-      <li>Experience with relational databases (mySQL/PostgresSQL)</li>
+      <li>Experience with relational databases (MySQL/PostgresSQL)</li>
       <li>Bachelor’s degree or higher in computer science or a related field</li>
     </ul>
 
