--- a/public/data/vacancies/frontend.html
+++ b/public/data/vacancies/frontend.html
@@ -6,7 +6,7 @@
 
     <ul class="list-disc pl-4">
       <li>Full-time</li>
-      <li>Remote (Europe, Georgia, Armenia, Turkey, Kazakhstan, Russia)</li>
+      <li>Remote</li>
     </ul>
 
     <p class="pt-8">Required skills:</p>
