--- a/public/data/vacancies/rust.html
+++ b/public/data/vacancies/rust.html
@@ -10,9 +10,9 @@
 
     <p class="pt-8">Required skills:</p>
     <ul class="list-disc pl-4">
-      <li>5+ years of work experience in developing including 1+ year in Rust</li>
+      <li>5+ years of work experience in development, including 1+ year in Rust</li>
       <li>Knowledge of cryptography and security best practices</li>
-      <li>Experience in building Distributed systems</li>
+      <li>Experience in building distributed systems</li>
       <li>Designing and implementing REST or gRPC APIs</li>
       <li>Experience with relational databases (SQLite/MySQL/PostgresSQL)</li>
       <li>Bachelor’s degree or higher in computer science or a related field</li>
@@ -20,8 +20,7 @@
 
     <p class="pt-8">Desired Skills & Experience:</p>
     <ul class="list-disc pl-4">
-      <li>Experience in building Decentralized application</li>
-      <li>Experience with SI OIDC, DIDs, IPFS will be a big plus</li>
+      <li>Experience in building decentralized applications</li>
       <li>Understanding blockchain technology</li>
       <li>Experience with Linux, Docker and Kubernetes</li>
     </ul>
