--- a/data/vacancies/mobile.html
+++ b/data/vacancies/mobile.html
@@ -10,7 +10,7 @@
 
     <p class="pt-8">Required skills:</p>
     <ul class="list-disc pl-4">
-      <li>Proficiency in both Swift/iOS and Java/Android development</li>
+      <li>Proficiency in both Swift/iOS and Kotlin/Android development</li>
       <li>Proficient with Swift and familiarity with Objective-C.</li>
       <li>Knowledge of the asynchronous, Swift Primises and event-based design of RxJava or Kotlin coroutines</li>
       <li>Knowledge of mobile app testing best practices</li>
