--- a/public/data/vacancies/rust.html
+++ b/public/data/vacancies/rust.html
@@ -21,7 +21,7 @@
     <p class="pt-8">Desired Skills & Experience:</p>
     <ul class="list-disc pl-4">
       <li>Experience in building Decentralized application</li>
-      <li>Experience with SI OIDC, DIDs, IPFS will be a big plus</li>
+      <!-- <li>Experience with SI OIDC, DIDs, IPFS will be a big plus</li> -->
       <li>Understanding blockchain technology</li>
       <li>Experience with Linux, Docker and Kubernetes</li>
     </ul>
