--- a/data/vacancies/rust.html
+++ b/data/vacancies/rust.html
@@ -35,6 +35,8 @@
 
     <p class="pt-8">About the project:</p>
     <p class="pl-4"><a target="_blank" href="https://mee.foundation/">Mee https://mee.foundation/ </a> is a software and legal framework to support human-centered apps that improve the quality of online life by giving people more control over their personal data.</p>
+    <p class="pl-4">Create a software and legal framework to support human-centered apps. Apps that improve the quality of online life by giving people more control over their
+      personal data.</p>
 
   </div>
 </div>
