--- a/public/data/vacancies/rust.html
+++ b/public/data/vacancies/rust.html
@@ -6,13 +6,13 @@
     <ul class="list-disc pl-4">
       <li>Full-time</li>
       <li>Remote</li>
+      <li>Experience with Rust is not required but you should be willing to learn Rust</li>
     </ul>
 
     <p class="pt-8">Required skills:</p>
     <ul class="list-disc pl-4">
-      <li>5+ years of work experience in developing including 1+ year in Rust</li>
+      <li>5+ years of work experience in developing</li>
       <li>Knowledge of cryptography and security best practices</li>
-      <li>Experience in building Distributed systems</li>
       <li>Designing and implementing REST or gRPC APIs</li>
       <li>Experience with relational databases (SQLite/MySQL/PostgresSQL)</li>
       <li>Bachelor’s degree or higher in computer science or a related field</li>
@@ -20,6 +20,7 @@
 
     <p class="pt-8">Desired Skills & Experience:</p>
     <ul class="list-disc pl-4">
+      <li>Experience in building Distributed systems</li>
       <li>Experience in building Decentralized application</li>
       <!-- <li>Experience with SI OIDC, DIDs, IPFS will be a big plus</li> -->
       <li>Understanding blockchain technology</li>
