--- a/data/vacancies/backend.html
+++ b/data/vacancies/backend.html
@@ -15,7 +15,7 @@
       <li>3+ years of work experience in developing</li>
       <li>Strong background in Java or Scala</li>
       <li>Designing and implementing REST or gRPC APIs</li>
-      <li>Experience with relational databases (MySQL/PostgresSQL)</li>
+      <li>Experience with relational databases (MySQL/PostgreSQL)</li>
       <li>Bachelor’s degree or higher in computer science or a related field</li>
     </ul>
 
