--- a/public/data/vacancies/rust.html
+++ b/public/data/vacancies/rust.html
@@ -14,7 +14,7 @@
       <li>5+ years of work experience in developing</li>
       <li>Knowledge of cryptography and security best practices</li>
       <li>Designing and implementing REST or gRPC APIs</li>
-      <li>Experience with relational databases (SQLite/MySQL/PostgresSQL)</li>
+      <li>Experience with relational databases (SQLite/MySQL/PostgreSQL)</li>
       <li>Bachelor’s degree or higher in computer science or a related field</li>
     </ul>
 
@@ -23,7 +23,7 @@
       <li>Experience in building Distributed systems</li>
       <li>Experience in building Decentralized application</li>
       <!-- <li>Experience with SI OIDC, DIDs, IPFS will be a big plus</li> -->
-      <li>Understanding blockchain technology</li>
+      <!-- <li>Understanding blockchain technology</li> -->
       <li>Experience with Linux, Docker and Kubernetes</li>
     </ul>
 
