--- a/data/vacancies/rust.html
+++ b/data/vacancies/rust.html
@@ -35,7 +35,7 @@
     </ul>
 
     <p class="pt-8">About the project:</p>
-    <p class="pl-4"><a target="_blank" href="https://mee.foundation/">Mee https://mee.foundation/ </a> is a software and legal framework to support human-centered apps that improve the quality of online life by giving people more control over their personal data.</p>
+    <p class="pl-4"><a target="_blank" href="https://getmee.org/">Mee https://getmee.org/ </a> is a software and legal framework to support human-centered apps that improve the quality of online life by giving people more control over their personal data.</p>
 
   </div>
 </div>
