--- a/data/vacancies/backend.html
+++ b/data/vacancies/backend.html
@@ -31,7 +31,7 @@
     <p class="pt-8">We offer:</p>
     <ul class="list-disc pl-4">
       <li>Paid time off (24 working days per year)</li>
-      <li>Equipment: laptop (i7, 16/32GB RAM), 4k monitor</li>
+      <li>Equipment: laptop (M1/i7, 16/32GB)</li>
       <li>Flexible working hours</li>
       <li>Help with relocation from Russian</li>
     </ul>
@@ -41,7 +41,6 @@
       supercharging the fight against ideological extremism to providing actionable predictions for traders on financial markets. The customers in our target market love
       innovation, and spend over $10 billion USD annually on data and analytics. VieRally has proven the science behind its platform, signed up early customers, validated its
       solution with industry leaders (including Senior Vice Presidents at Fortune-100 companies), and secured initial funding.
-
     </p>
   </div>
 </div>
