--- a/data/vacancies/devops.html
+++ b/data/vacancies/devops.html
@@ -1,14 +1,22 @@
 <div>
   <h1 class="font-medium text-4xl mb-5">SRE Engineer (DevOps)</h1>
   <div class="font-normal text-lg pt-16">
-    <p>We are looking for SRE Engineer.</p>
+    
+    <ul class="list-disc pl-4">
+      <li>Full-time</li>
+      <li>Remote</li>
+    </ul>
+
+    <p>We're looking for an SRE Engineer to join our team and work closely with the product owner and team of other software engineers.</p>
+
+
     <p class="pt-8">Required skills:</p>
     <ul class="list-disc pl-4">
+      <li>Bachelor’s degree or higher in computer science or a related field</li>
+      <li>3+ years of work experience in develpment</li>
       <li>Expertise in designing and operating AWS cloud</li>
       <li>Developing IaC using Terraform</li>
       <li>Kubernetes, Docker</li>
-      <li>Bachelor’s degree or higher in computer science or a related field</li>
-      <li>3+ years of work experience in develpment</li>
     </ul>
 
     <p class="pt-8">Desired skills:</p>
