--- a/data/vacancies/devops.html
+++ b/data/vacancies/devops.html
@@ -16,12 +16,13 @@
       <li>3+ years of work experience in develpment</li>
       <li>Expertise in designing and operating AWS cloud</li>
       <li>Developing IaC using Terraform</li>
-      <li>Kubernetes, Docker</li>
+      <li>Kubernetes, Containers</li>
     </ul>
 
     <p class="pt-8">Desired skills:</p>
     <ul class="list-disc pl-4">
       <li>Experience with observability tools like Prometheus, Grafana, CloudWatch</li>
+      <li>Experience with Istio, Envoy + WASM</li>
       <li>Work experience with GCP or OCI</li>
     </ul>
 
