--- a/data/vacancies/devops.html
+++ b/data/vacancies/devops.html
@@ -22,7 +22,7 @@
     <p class="pt-8">Desired skills:</p>
     <ul class="list-disc pl-4">
       <li>Experience with observability tools like Prometheus, Grafana, CloudWatch</li>
-      <li>Experience with Istio, Envoy + WASM</li>
+      <li>Experience with Istio, Envoy + Wasm plugin</li>
       <li>Work experience with GCP or OCI</li>
     </ul>
 
