--- a/data/vacancies/frontend.html
+++ b/data/vacancies/frontend.html
@@ -23,12 +23,12 @@
       <li>React Router</li>
       <li>Typescript</li>
       <li>Tailwind</li>
-      <li>I18-next</li>
-      <li>NodeJS</li>
-      <li>Comfortable with databases: SQL, MongoDB</li>
+      <!-- <li>I18-next</li> -->
       <li>Recoil/Jotai state management</li>
-      <li>Monorepo (yarn workspaces)</li>
       <li>Webpack/Vite/Snowpack</li>
+      <!-- <li>Monorepo (yarn workspaces)</li> -->
+      <li>NodeJS</li>
+      <!-- <li>Comfortable with databases: SQL, MongoDB</li> -->
     </ul>
 
     <p class="pt-8">We offer:</p>
@@ -36,7 +36,7 @@
       <li>Paid time off (24 working days per year)</li>
       <li>Equipment: laptop (M1/i7, 16/32GB RAM)</li>
       <li>Flexible working hours</li>
-      <li>Help with relocation from Russian</li>
+      <!-- <li>Help with relocation from Russia</li> -->
     </ul>
 
     <p class="pt-8">About the project:</p>
