--- a/data/vacancies/rust.html
+++ b/data/vacancies/rust.html
@@ -30,7 +30,7 @@
     <p class="pt-8">We offer:</p>
     <ul class="list-disc pl-4">
       <li>Paid time off (24 working days per year)</li>
-      <li>Equipment: laptop (M1/i7/i9, 16/32GB)</li>
+      <li>Equipment: laptop (M1/i9, 16/32GB)</li>
       <li>Flexible working hours</li>
     </ul>
 
