--- a/public/data/vacancies/backend.html
+++ b/public/data/vacancies/backend.html
@@ -31,9 +31,9 @@
     <p class="pt-8">We offer:</p>
     <ul class="list-disc pl-4">
       <li>Paid time off (24 working days per year)</li>
-      <li>Equipment: laptop (M1/i7, 16/32GB)</li>
+      <li>Equipment: laptop (M1/i7/i9, 16/32GB)</li>
       <li>Flexible working hours</li>
-      <li>Help with relocation from Russian</li>
+      <!-- <li>Help with relocation from Russia</li> -->
     </ul>
 
     <p class="pt-8">About the project:</p>
