--- a/public/data/vacancies/frontend.html
+++ b/public/data/vacancies/frontend.html
@@ -23,12 +23,12 @@
       <li>React Router</li>
       <li>Typescript</li>
       <li>Tailwind</li>
-      <li>I18-next</li>
-      <li>NodeJS</li>
-      <li>Comfortable with databases: SQL, MongoDB</li>
+      <!-- <li>I18-next</li> -->
       <li>Recoil/Jotai state management</li>
-      <li>Monorepo (yarn workspaces)</li>
       <li>Webpack/Vite/Snowpack</li>
+      <!-- <li>Monorepo (yarn workspaces)</li> -->
+      <li>NodeJS</li>
+      <!-- <li>Comfortable with databases: SQL, MongoDB</li> -->
     </ul>
 
     <p class="pt-8">We offer:</p>
@@ -36,17 +36,17 @@
       <li>Paid time off (24 working days per year)</li>
       <li>Equipment: laptop (M1/i7, 16/32GB RAM)</li>
       <li>Flexible working hours</li>
-      <li>Help with relocation from Russian</li>
+      <!-- <li>Help with relocation from Russia</li> -->
     </ul>
 
     <p class="pt-8">About the project:</p>
-    <p class="pl-4">Pakira is an early stage technology startup in the B2B supply chain and fintech space with a mission to digitize physical commodities’ (lumber, grains, metals)
-      trading and operations, via an all-in-one, integrated platform</p>
-    <!-- <p class="pl-4">VieRally is building an AI-powered platform predicting opinion dynamics on social media to anticipate offline behavior and consumer opinion. We evolved from
+    <!-- <p class="pl-4">Pakira is an early stage technology startup in the B2B supply chain and fintech space with a mission to digitize physical commodities’ (lumber, grains, metals)
+      trading and operations, via an all-in-one, integrated platform</p> -->
+    <p class="pl-4">VieRally is building an AI-powered platform predicting opinion dynamics on social media to anticipate offline behavior and consumer opinion. We evolved from
       supercharging the fight against ideological extremism to providing actionable predictions for traders on financial markets. The customers in our target market love
       innovation, and spend over $10 billion USD annually on data and analytics. VieRally has proven the science behind its platform, signed up early customers, validated its
       solution with industry leaders (including Senior Vice Presidents at Fortune-100 companies), and secured initial funding.
-    </p>  -->
+    </p> 
 
   </div>
 </div>
