--- a/public/data/vacancies/mobile.html
+++ b/public/data/vacancies/mobile.html
@@ -34,7 +34,7 @@
     <p class="pt-8">We offer:</p>
     <ul class="list-disc pl-4">
       <li>Paid time off (24 working days per year)</li>
-      <li>Equipment: Macbook Pro</li>
+      <li>Equipment: laptop (M1/i9, 16/32GB RAM)</li>
       <li>Flexible working hours</li>
     </ul>
 
