--- a/data/vacancies/fullstack-node.html
+++ b/data/vacancies/fullstack-node.html
@@ -14,7 +14,7 @@
     <ul class="list-disc pl-4">
       <li>3+ years of work experience in developing</li>
       <li>Strong background in Javascript and Typescript</li>
-      <li>Designing and implementing REST or GraphQL</li>
+      <li>Designing and implementing REST or GraphQL API</li>
       <li>Experience with relational databases (MySQL/PostgreSQL)</li>
       <!-- <li>Experience with document-oriented databases (MongoDB)</li> -->
       <li>Experience with ORMs like TypeORM/Prisma/Knex</li>
@@ -23,9 +23,9 @@
     <p class="pt-8">Desired skills:</p>
     <ul class="list-disc pl-4">
       <li>Experience with frontend (React apps)</li>
-      <li>Understanding React.FC principles, hooks API</li>
+      <!-- <li>Understanding React.FC principles, hooks API</li> -->
       <li>Experience with Bundlers (Vite/Rollup/Webpack)</li>
-      <li>Experience with NestJS or alternatives</li>
+      <!-- <li>Experience with NestJS or alternatives</li> -->
       <li>Interest in Kubernetes</li>
       <li>Experience with Linux, Docker</li>
     </ul>
