--- a/public/data/vacancies/fullstack-node.html
+++ b/public/data/vacancies/fullstack-node.html
@@ -1,5 +1,5 @@
 <div>
-  <h1 class="font-medium text-4xl mb-5">Fullstack Node.js Engineer (JavaScript/TypeScript)</h1>
+  <h1 class="font-medium text-4xl mb-5">Backend (Node.js) Enginee</h1>
 
   <div class="font-normal text-lg pt-16">
 
@@ -12,22 +12,20 @@
 
     <p class="pt-8">Required skills:</p>
     <ul class="list-disc pl-4">
-      <li>5+ years of work experience in developing</li>
+      <li>3+ years of work experience in developing</li>
       <li>Strong background in Javascript and Typescript</li>
-      <li>Designing and implementing REST or GraphQL</li>
+      <li>Designing and implementing REST or GraphQL API</li>
       <li>Experience with relational databases (MySQL/PostgreSQL)</li>
-      <li>Understanding the core OOP or FP concepts</li>
-      <li>Experience with document-oriented databases (MongoDB)</li>
-      <li>Experience with NestJS or alternatives</li>
+      <!-- <li>Experience with document-oriented databases (MongoDB)</li> -->
       <li>Experience with ORMs like TypeORM/Prisma/Knex</li>
-
     </ul>
 
     <p class="pt-8">Desired skills:</p>
     <ul class="list-disc pl-4">
       <li>Experience with frontend (React apps)</li>
-      <li>Understanding React.FC principles, hooks API</li>
+      <!-- <li>Understanding React.FC principles, hooks API</li> -->
       <li>Experience with Bundlers (Vite/Rollup/Webpack)</li>
+      <!-- <li>Experience with NestJS or alternatives</li> -->
       <li>Interest in Kubernetes</li>
       <li>Experience with Linux, Docker</li>
     </ul>
@@ -35,12 +33,14 @@
     <p class="pt-8">We offer:</p>
     <ul class="list-disc pl-4">
       <li>Paid time off (24 working days per year)</li>
-      <li>Equipment: laptop (M1/M2/i7/i9, 16/32GB)</li>
+      <li>Equipment: laptop (M1/i7/i9, 16/32GB)</li>
       <li>Flexible working hours</li>
       <!-- <li>Help with relocation from Russia</li> -->
     </ul>
 
     <p class="pt-8">About the project:</p>
-    <p class="pl-4">TBD</p>
+    <p class="pl-4">
+       <a href="https://www.claira.ai">Claira Technologies</a> builds technologies to bring clarity to people management claira's insights on optimizing human capital. 
+    </p>
   </div>
 </div>
