Fix carriers descriptions

--- a/public/data/vacancies/fullstack-php.html
+++ b/public/data/vacancies/fullstack-php.html
@@ -19,7 +19,7 @@
     <p class="pt-8">Desired skills:</p>
     <ul class="list-disc pl-4">
       <li>Background in Javascript/Typescript</li>
-      <li>Experience with frontend (React apps)</li>
+      <li>Experience with frontend (React apps, CSS)</li>
       <li>Experience with CMS like SocialEngine</li>
       <li>Experience with Linux, Docker</li>
     </ul>
@@ -27,7 +27,7 @@
     <p class="pt-8">We offer:</p>
     <ul class="list-disc pl-4">
       <li>Paid time off (24 working days per year)</li>
-      <li>Equipment: laptop (M1/M2/i7/i9, 16/32GB)</li>
+      <li>Equipment: laptop (Apple M1/M2, Intel i7/i9, 16/32GB)</li>
       <li>Flexible working hours</li>
     </ul>
 
