--- a/public/data/vacancies/backend.html
+++ b/public/data/vacancies/backend.html
@@ -12,7 +12,7 @@
 
     <p class="pt-8">Required skills:</p>
     <ul class="list-disc pl-4">
-      <li>3+ years of work experience in developing</li>
+      <li>5+ years of work experience in developing</li>
       <li>Strong background in Java or Scala</li>
       <li>Designing and implementing REST or gRPC APIs</li>
       <li>Experience with relational databases (MySQL/PostgreSQL)</li>
@@ -25,7 +25,7 @@
       <li>Understanding the core FP concepts</li>
       <li>Interest in Kubernetes</li>
       <li>Experience with Linux, Docker</li>
-      <li>Scala is not a requirement, but you must be willing to learn Scala</li>
+      <!-- <li>Scala is not a requirement, but you must be willing to learn Scala</li> -->
     </ul>
 
     <p class="pt-8">We offer:</p>
@@ -33,14 +33,14 @@
       <li>Paid time off (24 working days per year)</li>
       <li>Equipment: laptop (Apple M1/M2, Intel i7/i9, 16/32GB)</li>
       <li>Flexible working hours</li>
-      <!-- <li>Help with relocation from Russia</li> -->
     </ul>
 
     <p class="pt-8">About the project:</p>
-    <p class="pl-4">VieRally is building an AI-powered platform predicting opinion dynamics on social media to anticipate offline behavior and consumer opinion. We evolved from
+    <p class="pl-4">https://www.blankslatetech.co/ - Blank Slate is a company focused on creating user-friendly products that streamline the study process. They are a deeptech cognitive science firm, which means they utilize advanced technology and knowledge from peer-reviewed research. The company was founded by individuals who graduated from prestigious institutions such as Yale and MIT.  </p>
+    <!-- <p class="pl-4">VieRally is building an AI-powered platform predicting opinion dynamics on social media to anticipate offline behavior and consumer opinion. We evolved from
       supercharging the fight against ideological extremism to providing actionable predictions for traders on financial markets. The customers in our target market love
       innovation, and spend over $10 billion USD annually on data and analytics. VieRally has proven the science behind its platform, signed up early customers, validated its
       solution with industry leaders (including Senior Vice Presidents at Fortune-100 companies), and secured initial funding.
-    </p>
+    </p> -->
   </div>
 </div>
