--- a/public/data/vacancies/rust.html
+++ b/public/data/vacancies/rust.html
@@ -6,7 +6,7 @@
     <ul class="list-disc pl-4">
       <li>Full-time</li>
       <li>Remote</li>
-      <li>Experience with Rust is not required but you should be willing to learn Rust</li>
+      <!-- <li>Experience with Rust is not required but you should be willing to learn Rust</li> -->
     </ul>
 
     <p class="pt-8">Required skills:</p>
@@ -30,7 +30,7 @@
     <p class="pt-8">We offer:</p>
     <ul class="list-disc pl-4">
       <li>Paid time off (24 working days per year)</li>
-      <li>Equipment: laptop (M1/i9, 16/32GB)</li>
+      <li>Equipment: laptop (M2/i9, 16/32GB)</li>
       <li>Flexible working hours</li>
     </ul>
 
