Rewrite frontend vacation

--- a/public/data/vacancies/frontend.html
+++ b/public/data/vacancies/frontend.html
@@ -20,8 +20,8 @@
 
     <p class="pt-8">Desired skills:</p>
     <ul class="list-disc pl-4">
-      <li>React v17+, hooks API, functional components (or alternatives)</li>
-      <li>React Router</li>
+      <li>React v17+, hooks API, functional components</li>
+      <li>Experience with React Native (or the ambition to learn)</li>
       <li>Typescript</li>
       <li>Tailwind</li>
       <li>Recoil/Jotai State Management</li>
