new data-engineer vacation (2)

--- a/public/data/vacancies/dataengineer.html
+++ b/public/data/vacancies/dataengineer.html
@@ -1,5 +1,5 @@
 <div>
-  <h1 class="font-medium text-4xl mb-5">Data Scientist</h1>
+  <h1 class="font-medium text-4xl mb-5">Data Engineer (Python)</h1>
   <div class="font-normal text-lg pt-16">
     <ul class="list-disc pl-4">
       <li>Full-time</li>
@@ -21,14 +21,6 @@
       <li>Understanding of data modeling concepts</li>
       <li>Experience with creating ML data for text classification</li>
       <li>Experience with cloud computing platforms (e.g., AWS, Azure, GCP) </li>
-    </ul>
-
-    <p class="pt-8">Key responsibilities will include:</p>
-    <ul class="list-disc pl-4">
-      <li>Computationally analyzing social network dynamics and language usage data</li>
-      <li>Building machine-learning models on social network and language signals for the prediction of intermediate (e.g. “re-tweeting”) and final phenomena of interest (e.g.
-        “Brand Sentiment”) </li>
-      <li>Exploring data and adapting scientific research, e.g. literature search and replication</li>
     </ul>
 
     <p class="pt-8">We offer:</p>
