Add english level to mobile vacation

--- a/public/data/vacancies/mobile.html
+++ b/public/data/vacancies/mobile.html
@@ -17,6 +17,7 @@
       <li>Knowledge of mobile app testing best practices</li>
       <li>Understanding of teamwork rules, project support practices, Git, Jira, or analogs</li>
       <li>3+ years of native mobile development experience</li>
+      <li>Minimum English level - B2</li>
     </ul>
 
     <p class="pt-8">Desired Skills & Experience:</p>
