--- a/public/data/vacancies/backend.html
+++ b/public/data/vacancies/backend.html
@@ -1,5 +1,5 @@
 <div>
-  <h1 class="font-medium text-4xl mb-5">Software Engineer (Scala/Java)</h1>
+  <h1 class="font-medium text-4xl mb-5">Senior Software Engineer (Scala)</h1>
 
   <div class="font-normal text-lg pt-16">
 
@@ -8,22 +8,17 @@
       <li>Remote</li>
     </ul>
 
-    <!-- <p>We are looking for Software Engineer (Scala).</p> -->
-
     <p class="pt-8">Required skills:</p>
     <ul class="list-disc pl-4">
-      <li>5+ years of work experience in developing</li>
-      <li>Strong background in Java or Scala</li>
-      <li>1+ years of work experience with Scala</li>
-      <li>Designing and implementing REST or gRPC APIs</li>
-      <li>Experience with relational databases (MySQL/PostgreSQL)</li>
+      <li>4+ years of work experience with Scala</li>
+      <li>Experience with relational databases</li>
+      <li>Experience with ZIO or Cats Effect</li>
       <li>Bachelor’s degree or higher in computer science or a related field</li>
+      <li>Minimum English level - B2</li>
     </ul>
 
     <p class="pt-8">Desired skills:</p>
     <ul class="list-disc pl-4">
-      <li>Experience with ZIO or Akka, ideally both</li>
-      <li>Understanding the core FP concepts</li>
       <li>Interest in Kubernetes</li>
       <li>Experience with Linux, Docker</li>
       <!-- <li>Scala is not a requirement, but you must be willing to learn Scala</li> -->
@@ -32,16 +27,11 @@
     <p class="pt-8">We offer:</p>
     <ul class="list-disc pl-4">
       <li>Paid time off (24 working days per year)</li>
-      <li>Equipment: laptop (Apple M1/M2, Intel i7/i9, 16/32GB)</li>
+      <li>Equipment: laptop (Apple M1/M2/M3, Intel i7/i9)</li>
       <li>Flexible working hours</li>
     </ul>
 
     <p class="pt-8">About the project:</p>
-    <p class="pl-4">https://www.blankslatetech.co/ - Blank Slate is a company focused on creating user-friendly products that streamline the study process. They are a deeptech cognitive science firm, which means they utilize advanced technology and knowledge from peer-reviewed research. The company was founded by individuals who graduated from prestigious institutions such as Yale and MIT.  </p>
-    <!-- <p class="pl-4">VieRally is building an AI-powered platform predicting opinion dynamics on social media to anticipate offline behavior and consumer opinion. We evolved from
-      supercharging the fight against ideological extremism to providing actionable predictions for traders on financial markets. The customers in our target market love
-      innovation, and spend over $10 billion USD annually on data and analytics. VieRally has proven the science behind its platform, signed up early customers, validated its
-      solution with industry leaders (including Senior Vice Presidents at Fortune-100 companies), and secured initial funding.
-    </p> -->
+    <p class="pl-4">VieRally is a Predictive Brand Management platform, empowering Brands and agencies to proactively market their brand and to protect against reputational risk. VieRally generates actionable, predictive, and contextual insights and suggestions for marketing, advertising, social-digital and public relations professionals.</p>
   </div>
 </div>
